less と git を追加。

--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:5.6-apache
 
 RUN apt-get update \
-  && apt-get install -y nodejs npm \
+  && apt-get install -y nodejs npm less git \
   && npm cache clean \
   && npm install n -g \
   && n stable \
